syntax = "proto3";

option csharp_namespace = "Indy.Agent.Messages";

message Msg {
    string id = 1;
    string type = 2;
    string aud = 3;
    string origin = 4;
    bytes content = 5;
}

enum Status {
    OK = 0;
    ERROR = 1;
    INVALID_SIGNATURE = 2;
    MISSING_SIGNATURE = 3;
    UNKNOWN_ERROR = 4;
}

// urn:sovrin:agent:message_type:streetcred.nyc/*

message GetMessages {
    string did = 1;
}

message GetMessagesResponse {
    repeated Msg messages = 1;
}